# CDemo

./: README.md
app/: CMakeLists.txt  CMakeListsNew.txt  CMakeListsOld.txt  build.gradle
app/src/androidTest/java/itcode/com/cdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NullTest.cpp  Windows.c.c  defineTest.cpp  dynamicMemory.cpp  fuck.cpp  helloWorld.cpp  maincpp.cpp  native-lib.cpp  pointerTest.cpp  pthreadJoinDetach.cpp  pthreadWithMultiParams.cpp  regularTest.cpp  signal.cpp  stringTest2.cpp  structTest.cpp  suport.cpp  转义字符.c
app/src/main/cpp/02CPP/_20140807/: classAndStruct.cpp  fuckCPP.cpp  function.cpp  namespace.cpp  newDelete.cpp  protectParams.cpp  strToInt.cpp  testArry.cpp
app/src/main/cpp/02CPP/_20140807/classTest/: Person.cpp  Person.h  main  main.cpp  man.cpp  man.h  mystring.cpp  mystring.h  single.cpp  single.h
app/src/main/cpp/02CPP/_20140807/mixedCandCPP/cTest/: cTest.c  makefile
app/src/main/cpp/02CPP/_20140807/mixedCandCPP/cppTest/: cppTest  makefile
app/src/main/cpp/02CPP/_20140807/mixedCandCPP/libToso/: testlib.c
app/src/main/cpp/02CPP/_20140807/udp_win/: makefile  udp.c  udp.cpp  udp.h
app/src/main/cpp/02CPP/_20140808/mixedCandCPP/: testlib.h
app/src/main/cpp/02CPP/_20140808/mixedCandCPP/cppTest/: cppTest.cpp
app/src/main/cpp/02CPP/_20140808/mixedCandCPP/libToso/: makefile
app/src/main/cpp/02CPP/_20140808/udp_win/: main.cpp  udp.c  udp.h
app/src/main/cpp/02CPP/_20140810/: friendTest.cpp  operatorTest.cpp
app/src/main/cpp/02CPP/_20140810/qtDemo/: MyWidget.cpp  MyWidget.h  main.cpp
app/src/main/cpp/02CPP/_20140813/: TestConstInt.cpp  TestConstString.cpp  auto.cpp  constc.c  constc.cpp  externTest.cpp  funcOverride.cpp  namespaceTest.cpp  newdelete.cpp  referenceAda.cpp  referenceTest.cpp
app/src/main/cpp/02CPP/_20140814/: Cstruct.c  TestInteger.cpp  auto.cpp  enum.cpp  functemplate.cpp  inlineTest.cpp  testcpp.cpp  wcharTest.cpp
app/src/main/cpp/02CPP/_20140815/: VariParamTemplate.cpp  castTest.cpp  funcTempORPrivate.cpp  funcTemplateOverride.cpp  funcWrapper.cpp  lambdaTest.cpp  newAda.cpp  newArr.cpp
app/src/main/cpp/02CPP/_20140816/: 1.threadConstructer.cpp  10.threadArgs.cpp  11.swapThread.cpp  12.moveThread.cpp  2.threadAsync.cpp  3.multThread.cpp  4.join.cpp  5.Detach.cpp  6.autoSecurity.cpp  7.lambdaThread.cpp  8.timeWait.cpp  9.customThread.cpp  auto_ptrTest.cpp  bindTest.cpp  debugAndassert.cpp  escapeTest.cpp  refWrapper.cpp  templateObject.cpp  threadTest.cpp  usingTest.cpp
app/src/main/cpp/02CPP/_20140817/: UnionTest.cpp  cppstruct.cpp  hannoi.cpp  mutableAndconst.cpp
app/src/main/cpp/02CPP/_20140817/QTClass/: QTClass.pro
app/src/main/cpp/02CPP/_20140817/QTDemo/: QTDemo.pro
app/src/main/cpp/02CPP/_20140817/build-QTClass-Desktop_Qt_5_8_0_clang_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp
app/src/main/cpp/02CPP/_20140817/build-QTClass-Desktop_Qt_5_8_0_clang_64bit-Debug/QTClass.app/Contents/: Info.plist
app/src/main/cpp/02CPP/_20140817/build-QTClass-Desktop_Qt_5_8_0_clang_64bit-Debug/QTClass.app/Contents/MacOS/: QTClass
app/src/main/cpp/02CPP/_20140817/build-QTDemo-Desktop_Qt_5_8_0_clang_64bit-Debug/: Makefile  moc_dialog.cpp
app/src/main/cpp/02CPP/_20140817/build-QTDemo-Desktop_Qt_5_8_0_clang_64bit-Debug/QTDemo.app/Contents/: Info.plist
app/src/main/cpp/02CPP/_20140817/build-QTDemo-Desktop_Qt_5_8_0_clang_64bit-Debug/QTDemo.app/Contents/MacOS/: QTDemo
app/src/main/cpp/02CPP/_20140819/: classEmbed.cpp  constructorTest.cpp  explictTest.cpp
app/src/main/cpp/02CPP/_20140820/: fushu.cpp  nullptr.cpp  sprintf_s.cpp
app/src/main/cpp/02CPP/_20140822/: ExternTest.java  externTest.cpp  mulExternTest.cpp
app/src/main/cpp/02CPP/_20140823/: VirtualAndDelete.cpp  nullPointerTest.cpp  overrideTest.cpp  pureVirtual.cpp  testbool.cpp  virtualTest.cpp
app/src/main/cpp/02CPP/testTime/: Timer1.cpp  Timer2.cpp  Timer3.cpp  chr2.cpp  chrono.cpp  chronoTest.cpp
app/src/main/cpp/other/: testva.cpp
app/src/main/cpp/point/: NullPoint.cpp  charAndString.cpp  gdbTest.cpp  pointAndArr.cpp  pointArr.cpp  pointParams.cpp  pointerTest.cpp  pointerToFunction.cpp  references.cpp  retRef.cpp
app/src/main/cpp/runoob/point/: MultPoint.cpp  referenceTest.cpp  retPoint.cpp  retReference.cpp
app/src/main/cpp/runoob/study/: PThreadTest.cpp  Windows.c.c  fin.cpp  main.cpp  native-lib.cpp  pthreadWithMultiParams.cpp  pthreadWithParam.cpp  signal.cpp  structTest2.cpp  templateTest2.cpp  templeteTest.cpp  testOut.cpp  testexception.cpp  转义字符.c
app/src/main/cpp/study/: pthreadWithParam.cpp  stringTest.cpp  testException2.cpp  testcatch.cpp
app/src/main/cpp/test/: charPoint.cpp
app/src/main/java/itcode/com/cdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/itcode/com/cdemo/: ExampleUnitTest.java
